test/spec_vectors/func/fail/module_61.wat
(module (func $type-break-nested-empty-vs-num (result i32) (block (br 1)) (br 0 (i32.const 1))))